=content added. fix egypts ccontent pages

--- a/about.html
+++ b/about.html
@@ -42,10 +42,23 @@
               <h2>ABOUT US</h2>
               <br />
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
-                provident aliquid debitis doloribus laudantium dolor quam sed
-                magni explicabo officiis adipisci porro recusandae<br />
-                tempore aspernatur nam, ipsam consectetur, mollitia nemo!
+                WhereToGo Travel is a family owned business started in 1995. Our
+                goal is to provide the best adventure tours for adventure
+                seekers around the world at the most competitive rates. We work
+                with the best tour guides and historians in the world to bring
+                to the best experience possible.<br /><br>
+
+                <b>Why Choose Us?</b>
+                <p>
+                  WhereToGo Travel offers unique tours of historic sites of the
+                  ancient and the modern world.<br> <br />Journey to different parts of
+                  the world and discover the stories behind the pyramids of Egypt
+                  or journey to Rome and experience the great collosseum.<br> <br>Connect with
+                  fellow adventure
+                  
+                  seekers on our tours while enjoying 5-star accommadations and
+                  service.
+                </p>
               </p>
               <div class="ratings-box">
                 <img
@@ -55,7 +68,7 @@
                 />
               </div>
               <div class="price-box">
-                <b><p>5 STAR SERVICE</p></b>
+                <b><p>Contact For More Information On Upcoming Tours*</p></b>
               </div>
             </div>
           </div>
