--- a/egypt-destinations.html
+++ b/egypt-destinations.html
@@ -42,10 +42,10 @@
               <h2>EGYPT</h2>
               <br />
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
-                provident aliquid debitis doloribus laudantium dolor quam sed
-                magni explicabo officiis adipisci porro recusandae<br />
-                tempore aspernatur nam, ipsam consectetur, mollitia nemo!
+                Ancient Egypt was a civilization of ancient North Africa. Egypt
+                was one of the earliest civilisations of the world. It is rich
+                is history and artefacts making it one of the sort after tourism
+                sites of the ancient world. Explore our upcoming tours to Egypt.
               </p>
               <div class="ratings-box">
                 <img
