--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
               Journey to Taj Mahal, an iconic symbol of love
             </h1>
             <p class="featured-desc">
-              Discover the unknown of the ancient world. You will tour the
-              ancient pyramids of Egypt and other exciting aritechture sites of
-              the ancient world.
+              One of the seven wonders of the world. Journey to the palace of
+              love and explore the rich history surrounding it.
             </p>
             <a class="featured-btn" href="india-tour-1.html">Learn More</a>
           </div>
@@ -111,9 +110,8 @@
               Experience the Colosseum, the Roman gladiatorial
             </h1>
             <p class="featured-desc">
-              Discover the unknown of the ancient world. You will tour the
-              ancient pyramids of Egypt and other exciting aritechture sites of
-              the ancient world.
+              Experiece the symbol of ancient Rome. Touring the gladiatorial you
+              feel and see where the gladiators of the ancient world fought.
             </p>
             <a class="featured-btn" href="italy-tour-1.html">Learn More</a>
           </div>
@@ -140,13 +138,14 @@
         <div class="about-copy">
           <h2>Why Choose Us?</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus
-            nulla sint amet et sequi enim? <br />Repudiandae maxime hic sunt
-            omnis eaque! Dicta, impedit consequuntur? Sequi quam pariatur
-            necessitatibus <br />illo quas! Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit. Minus nulla sint amet et sequi enim?
-            <br />Repudiandae maxime hic sunt omnis eaque! Dicta, impedit
-            consequuntur? Sequi quam pariatur necessitatibus illo quas!
+            WhereToGo Travel offers unique tours of historic sites of the
+            ancient and the modern world. <br />Journey to different parts of
+            the world and discover the stories behind the pyramids of Egypt<br />
+            or journey to Rome and experience the great collosseum. Connect with
+            fellow adventure
+            <br />
+            seekers on our tours while enjoying 5-star accommadations and
+            service.
           </p>
           <a class="about-btn" href="about.html">ABOUT US</a>
         </div>
