--- a/india-destinations.html
+++ b/india-destinations.html
@@ -42,10 +42,11 @@
               <h2>INDIA</h2>
               <br />
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
-                provident aliquid debitis doloribus laudantium dolor quam sed
-                magni explicabo officiis adipisci porro recusandae<br />
-                tempore aspernatur nam, ipsam consectetur, mollitia nemo!
+                India is rich in history and culture. It was in ancient India
+                that many of the worlds greatest civilisations flourished. From
+                the Mogul kings who built historic sites such as the Taj Mahal
+                and the oldest cities of the world like Jaipur India has it all.
+                Explore our upcoming tours and make a booking today.
               </p>
               <div class="ratings-box">
                 <img
