--- a/india-tour-1.html
+++ b/india-tour-1.html
@@ -42,15 +42,15 @@
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
-                <h4 class="highlight-text">August 9, 2020</h4>
+                <h4 class="highlight-text">July 17, 2020</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Duration:</h5>
-                <h4 class="highlight-text">9 Days</h4>
+                <h4 class="highlight-text">2 Days</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Activity Score:</h5>
-                <h4 class="highlight-text">3/5</h4>
+                <h4 class="highlight-text">2/5</h4>
               </div>
             </div>
           </div>
@@ -60,10 +60,9 @@
         <div class="my-tour-brief">
           <h2>One of the wonders of the world</h2>
           <p>
-            In four days we will visit India’s most essential destinations
-            including Agra’s Taj Mahal, Jaipur’s Amber Fort and Delhi’s
-            cornucopia of fascinating sights. But a journey with Reality Tours
-            is much more than traditional sightseeing.
+            In two days we will visit India’s most iconic destination Agra’s Taj
+            Mahal, it is known as the most fascinating sights of the ancient
+            world.
           </p>
         </div>
       </section>
@@ -74,19 +73,11 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accommodation provided
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
-              </li>
-              <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                With our tour guide Max Bundal, a expert of ancient indian
+                history
               </li>
             </ul>
           </div>
