--- a/india-tour-2.html
+++ b/india-tour-2.html
@@ -60,14 +60,9 @@
         <div class="my-tour-brief">
           <h2>Journey to the Pink City</h2>
           <p>
-            This compact Indian journey will introduce you to three very
-            different northern cities and the colourful rural life of Rajasthan.
-            From the hectic pace of Delhi with its bustling markets, magnificent
-            monuments, and colonial past, travel by private transport to Agra
-            and the mesmerizing beauty of the Taj Mahal — truly one of the
-            wonders of the world. Discover why Jaipur is called the Pink City
-            and get a taste of rural life at a Dhula village. Photographers and
-            culture lovers won't be disappointed on this classic adventure.
+            The journey will show you the colourful ancient city of Jaipure.
+            Discover why Jaipur is so famous for its colours, culture and
+            history. An adventure of a lifetime
           </p>
         </div>
       </section>
@@ -81,19 +76,11 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accommodation provided
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
-              </li>
-              <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                With our tour guide James Deamion, a expert of ancient indian
+                history
               </li>
             </ul>
           </div>
