--- a/italy-destinations.html
+++ b/italy-destinations.html
@@ -42,10 +42,10 @@
               <h2>ITALY</h2>
               <br />
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
-                provident aliquid debitis doloribus laudantium dolor quam sed
-                magni explicabo officiis adipisci porro recusandae<br />
-                tempore aspernatur nam, ipsam consectetur, mollitia nemo!
+                From cities like Rome, the symbol of power and culture in the
+                ancient world Italy has it all. If you're a lover of history
+                than experiencing Italy and it's great historic sites is a must!
+                Our tour guides will show you sites you didn't know existed.
               </p>
               <div class="ratings-box">
                 <img
