--- a/italy-tour-1.html
+++ b/italy-tour-1.html
@@ -42,15 +42,15 @@
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
-                <h4 class="highlight-text">August 9, 2020</h4>
+                <h4 class="highlight-text">January 12, 2020</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Duration:</h5>
-                <h4 class="highlight-text">9 Days</h4>
+                <h4 class="highlight-text">3 Days</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Activity Score:</h5>
-                <h4 class="highlight-text">3/5</h4>
+                <h4 class="highlight-text">4/5</h4>
               </div>
             </div>
           </div>
@@ -58,15 +58,12 @@
       </section>
       <section class="my-tour-brief-wrap">
         <div class="my-tour-brief">
-          <h2>Guide Tour of the Colosseum</h2>
+          <h2>Guided Tour of the Colosseum</h2>
           <p>
-            Follow in the footsteps of the fearless gladiators of Ancient Rome
-            and enter the Colosseum with no need to wait in line and explore the
-            magnificent amphitheater. You will be added to a small group with a
-            privileged entrance and after the security check you’ll be free to
-            explore the Colosseum by yourself. Read more about Colosseum
-            Skip-the-line ticket: Self-Guided Tour 2019 - Rome -
-            https://www.viator.com/en-AU/tours/Rome/Colosseum-Skip-the-line-ticket-Self-Guided-Tour/d511-48974P7?mcid=56757
+            Experience what it is like to be a gladiator of Ancient Rome. Enter
+            the colosseum with no waiting lines and explore the magnificent
+            amphitheater. You will be part of the group no more than 5-10 people
+            with access to VIP entrance and security clearence. Are you ready?
           </p>
         </div>
       </section>
@@ -83,10 +80,12 @@
                 Discover the history of the Colosseum and Ancient Rome
               </li>
               <li>
-                Skip the long lines to enter the monument
+                Tony Robertson a world renouned historian will accompany us of
+                the tour
               </li>
               <li>
-                Access the Palatine Hill and the Roman Forum
+                VIP access to the Palatine Hill and the Roman Forum with
+                WhereToGo Travel
               </li>
             </ul>
           </div>
