--- a/italy-tour-2.html
+++ b/italy-tour-2.html
@@ -42,15 +42,15 @@
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
-                <h4 class="highlight-text">August 9, 2020</h4>
+                <h4 class="highlight-text">May 9, 2020</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Duration:</h5>
-                <h4 class="highlight-text">9 Days</h4>
+                <h4 class="highlight-text">15 Days</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Activity Score:</h5>
-                <h4 class="highlight-text">3/5</h4>
+                <h4 class="highlight-text">4/5</h4>
               </div>
             </div>
           </div>
@@ -60,9 +60,10 @@
         <div class="my-tour-brief">
           <h2>Experience the holy city</h2>
           <p>
-            Immerse yourself in the Vatican's awe-inspiring art with no-wait
-            access to the Sistine Chapel, Vatican Museums, St. Peter’s Basilica,
-            and more.
+            Experience for yourself in the Vatican's shops, art and ancient
+            walls. You will be given full access to the Sistine Chapel, Vatican
+            Museums, St. Peter’s Basilica, and more. Our tour guide Christine
+            Gladom will tell you the stories behind the sites.
           </p>
         </div>
       </section>
@@ -76,19 +77,14 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Explore the Sistine Chapel, Museums and more
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accomadation provided throughout the tour
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Breakfast, lunch and dinner all catered for by the finest chefs
+                of the city
               </li>
             </ul>
           </div>
