--- a/italy-tour-3.html
+++ b/italy-tour-3.html
@@ -60,15 +60,12 @@
         <div class="my-tour-brief">
           <h2>Pompeii Ruins & Mt Vesuvius Volcano Tour</h2>
           <p>
-            Take a day out of your Rome vacation to get acquainted with Mt.
-            Vesuvius and Pompeii. This day trip to Pompeii includes a
-            steady-paced hike up Mt. Vesuvius (summer only) or a visit to Naples
-            when Vesuvius is closed in winter, plus a pizza in Naples and a tour
-            of the UNESCO-listed digs at Pompeii. Hear the history from a local
-            guide and admire artifacts that date back to the infamous Mt.
-            Vesuvius eruption of AD 79. Read more about Rome to Pompeii and Mt.
-            Vesuvius Day Trip with Admission Fees 2019 -
-            https://www.viator.com/tours/Rome/Pompeii-Day-Trip-from-Rome/d511-3731VESUVIUS?mcid=56757
+            A day trip with local guides to Pompeii includes hike up Mt.
+            Vesuvius. Then a trip to Naples with our guide John Edgar who has
+            studied the sites for over two decadeds. You get the opportunity to
+            get up and close to the ancient sites and remains of the ancient
+            world and listen to the stories of locals. A once in a life
+            experience.
           </p>
         </div>
       </section>
@@ -82,15 +79,13 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Hike up the side of the volcano and walk along its ridge, gazing
-                into the crater
+                Hike up the side of the volcano site
               </li>
               <li>
-                Drink in dramatic views over the Bay of Naples
+                Views from the Mt. Vesuvius
               </li>
               <li>
-                Day trip to Mount Vesuvius and Pompeii from Rome with an expert
-                guide
+                Discover the ancient remains of the volcanic eruption of Pompeii
               </li>
             </ul>
           </div>
