--- a/india-tour-3.html
+++ b/india-tour-3.html
@@ -42,7 +42,7 @@
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
-                <h4 class="highlight-text">August 9, 2020</h4>
+                <h4 class="highlight-text">August 1, 2020</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Duration:</h5>
@@ -50,7 +50,7 @@
               </div>
               <div class="my-tour-highlight">
                 <h5>Activity Score:</h5>
-                <h4 class="highlight-text">3/5</h4>
+                <h4 class="highlight-text">5/5</h4>
               </div>
             </div>
           </div>
@@ -75,19 +75,10 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accommodation provided
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
-              </li>
-              <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                With our tour guide historian Jean McKinnon
               </li>
             </ul>
           </div>
