--- a/egypt-tour-1.html
+++ b/egypt-tour-1.html
@@ -42,7 +42,7 @@
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
-                <h4 class="highlight-text">August 9, 2020</h4>
+                <h4 class="highlight-text">April 9, 2020</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Duration:</h5>
@@ -60,13 +60,11 @@
         <div class="my-tour-brief">
           <h2>The kingdom of kingdoms Egypt</h2>
           <p>
-            The kingdom of kingdoms Egypt is a country of rugged, harsh beauty
-            mixed with reminders of what was arguably the most impressive
-            ancient civilization history has ever known. The awe-inspiring
-            treasures and stunning landscapes of this country are perfectly
-            complemented by the warmth and hospitality of its people. You can't
-            travel back in time (at least, not yet), but exploring Egypt is
-            close enough.
+            Egypt is the go to site from adventure seekers and explorers. You
+            will experience the treasures and breathtaking landscapes that were
+            once a part of arguebly the oldest advanced civilisations in
+            history. Our tour includes visit to the Pyramid of Giza, the Nile
+            river and the tombs of great Kings.
           </p>
         </div>
       </section>
@@ -80,19 +78,10 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accommodation provided
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
-              </li>
-              <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                With our tour guide Amina Ahfeen, an expert of ancient Egypt
               </li>
             </ul>
           </div>
