--- a/egypt-tour-2.html
+++ b/egypt-tour-2.html
@@ -42,15 +42,15 @@
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
-                <h4 class="highlight-text">August 9, 2020</h4>
+                <h4 class="highlight-text">June 1, 2020</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Duration:</h5>
-                <h4 class="highlight-text">9 Days</h4>
+                <h4 class="highlight-text">12 Days</h4>
               </div>
               <div class="my-tour-highlight">
                 <h5>Activity Score:</h5>
-                <h4 class="highlight-text">3/5</h4>
+                <h4 class="highlight-text">5/5</h4>
               </div>
             </div>
           </div>
@@ -60,15 +60,10 @@
         <div class="my-tour-brief">
           <h2>El Lahun Pyramids</h2>
           <p>
-            Ancient Egypt tours representative will pick you up from your hotel
-            in Cairo to enjoy El Fayoum famous Pyramids. We will start with
-            Hawara Pyramid which is about 145 km far from Cairo. Hawara Pyramid
-            is built by King Amenemhat III (Dynasty XII). Then transfer to visit
-            El Lahon Pyramid which is about 07 km far from Hawara Pyramid. El
-            Lahun Pyramid was built by King Senusert II, (XII Dynasty). After
-            that visit Maydoum Pyramids which is about 40 km far from El Lahun
-            Pyramid. Late lunch will be served after finishing the tours. Then
-            back to your hotel in Cairo and overnight.
+            Our tour guides will meet you in Cairo hotel. From there you will
+            journey to the El Fayoum pyramids. On this tour you will visit the
+            tombs of some of the most famous ancient Egypt pharaohs and see the
+            ruins left behind.
           </p>
         </div>
       </section>
@@ -82,19 +77,11 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accommodation provided
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
-              </li>
-              <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                With our tour guide Max Bundal, a expert of ancient indian
+                history
               </li>
             </ul>
           </div>
