--- a/egypt-tour-3.html
+++ b/egypt-tour-3.html
@@ -60,16 +60,9 @@
         <div class="my-tour-brief">
           <h2>Historic tombs and temples of the Nile valley</h2>
           <p>
-            Explore the ancient Egypt’s most important sites on a 10-day tour
-            from Cairo to Aswan and Luxor with a Nile cruise and 5-star
-            accommodations. Slip into the historic tombs and temples of the Nile
-            valley as you see the sights by plane, boat and horse-drawn
-            carriage. Walk the necropolis at Saqqara and the Giza Plateau, see
-            Cairo’s religious landmarks, and visit the remains of the Kingdom of
-            Upper Egypt. Cruise from Aswan to Luxor, and disembark to see
-            monuments along the East and West Banks of the Nile. Read more about
-            10-Day Ancient Egypt Tour with Nile Cruise 2019 - Cairo -
-            https://www.viator.com/tours/Cairo/10-Day-Cairo-Tour-Includes-Nile-cruise-5-Star-Accommodation-plus-Transfers/d782-13306P6?mcid=56757
+            Explore the ancient Egypt's most rarest sites. You will journey from
+            Cario to Aswan, and then a Nile cruise. Connect with fellow
+            explorers and see the ancient ruins.
           </p>
         </div>
       </section>
@@ -83,19 +76,11 @@
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                5-star accommodation provided
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
-              </li>
-              <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                With our tour guide Max Bundal, a expert of ancient indian
+                history
               </li>
             </ul>
           </div>
