--- a/reference.html
+++ b/reference.html
@@ -41,12 +41,57 @@
             <div class="tour-copy">
               <h2>References</h2>
               <br />
-              <ul>
-                <li>asdas</li>
-                <li>asdas</li>
-                <li>asdas</li>
-                <li>asdas</li>
-                <li>asdas</li>
+              <ul class="references-list">
+                <li>
+                  Photo Credit: Fynn schmidt:
+                  https://unsplash.com/photos/hKwWA1nNKt4
+                </li>
+                <li>
+                  Photo Credit: Willian West:
+                  https://unsplash.com/photos/YpKiwlvhOpI
+                </li>
+                <li>
+                  Photo Credit: Tiago Rosado:
+                  https://unsplash.com/photos/mwV6PsB-7Bk
+                </li>
+                <li>
+                  Photo Credit: Damiano Baschiera:
+                  https://unsplash.com/photos/hFXZ5cNfkOk
+                </li>
+                <li>
+                  Photo Credit: kyran low:
+                  https://unsplash.com/photos/MvkLKGtBcUA
+                </li>
+                <li>
+                  Photo Credit: Christopher Czermak
+                  :https://unsplash.com/photos/7ybKmhDTcz0
+                </li>
+                <li>
+                  Photo Credit: AussieActive:
+                  https://unsplash.com/photos/oTRD-P4nU8Q
+                </li>
+
+                <li>
+                  Photo Credit: Mathew Schwartz:
+                  https://unsplash.com/photos/s87bBFZviAU
+                </li>
+                <li>
+                  Photo Credit: Simon Matzinger:
+                  https://unsplash.com/photos/boyXZfqpwpU
+                </li>
+
+                <li>
+                  Photo Credit: C Rayban:
+                  https://unsplash.com/photos/CIXoFys3gsw
+                </li>
+                <li>
+                  Photo Credit: Caleb Miller:
+                  https://unsplash.com/photos/0Bs3et8FYyg
+                </li>
+                <li>
+                  Photo Credit: Andy Holmes:
+                  https://unsplash.com/photos/h5cYy5OHDWM
+                </li>
               </ul>
             </div>
           </div>
